crates/vize_vitrine/src/napi/snapshots/vize_vitrine__napi__template__tests__template_whitespace_condense.snap
---
source: crates/vize_vitrine/src/napi/template.rs
expression: condense.code
---
export function render(_ctx, _cache) {
  return (_openBlock(), _createElementBlock("p", null, [
    _createTextVNode("foo bar "),
    _createElementVNode("i")
  ]))
}
