crates/vize_vitrine/src/napi/snapshots/vize_vitrine__napi__template__tests__template_whitespace_preserve.snap
---
source: crates/vize_vitrine/src/napi/template.rs
expression: preserve.code
---
export function render(_ctx, _cache) {
  return (_openBlock(), _createElementBlock("p", null, [
    _createTextVNode("foo  \n  bar "),
    _createElementVNode("i")
  ]))
}
